updated MyNavbar and some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 }
 
 .search {
-  max-width: 200px !important;
+  max-width: 300px !important;
 }
 
 .nav-icons svg:hover {
